# qb-rss-tool

./: .gitignore  LICENSE  README.md  build.js  modern.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: .eslintrc.js  modern-app-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  plugin.rs
src/components/IconButtonCopy/: index.tsx
src/components/IconButtonPaste/: index.tsx
src/components/Sidebar/: TabItem.tsx  constant.tsx  index.tsx
src/routes/: error.tsx  layout.tsx  page.tsx  theme.tsx
src/routes/about/: page.tsx
src/routes/setting/: page.tsx
src/routes/settings/: page.tsx
src/tests/: format.test.ts
src/utils/: format.ts  log.ts  qb-api.ts  rss.ts
src/views/about/: content.mdx
src/views/index/: store.ts
src/views/index/IndexHeader/: DataButtonGroup.tsx  ExportDataButton.tsx  InjectDataButton.tsx  RefreshAllButton.tsx  index.tsx
src/views/index/SubItemBlock/: FeedEditBlock.tsx  FeedMatchBlock.tsx  index.tsx
src/views/index/SubItemList/: index.tsx
src/views/layout/Sidebar/: constant.tsx  index.tsx
src/views/settings/: store.ts
